解決linux無法正常運轉問題V-1.2

--- a/shop.html
+++ b/shop.html
@@ -10,26 +10,26 @@
 	<title>購物專區</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 	<!-- fontawesome -->
-	<link rel="stylesheet" href="assets/css/all.min.css">
+	<link rel="stylesheet" href="/assets/css/all.min.css">
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
 	<!-- owl carousel -->
-	<link rel="stylesheet" href="assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="/assets/css/owl.carousel.css">
 	<!-- magnific popup -->
-	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="/assets/css/magnific-popup.css">
 	<!-- animate css -->
-	<link rel="stylesheet" href="assets/css/animate.css">
+	<link rel="stylesheet" href="/assets/css/animate.css">
 	<!-- mean menu css -->
-	<link rel="stylesheet" href="assets/css/meanmenu.min.css">
+	<link rel="stylesheet" href="/assets/css/meanmenu.min.css">
 	<!-- main style -->
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="/assets/css/main.css">
 	<!-- responsive -->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link rel="stylesheet" href="/assets/css/responsive.css">
 
 </head>
 <body>
@@ -142,7 +142,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product2.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product2.html"><img src="/assets/img/products/product-img-1.jpg" alt=""></a>
 						</div>
 						<h3>草莓</h3>
 						<p class="product-price"><span>每斤</span> 220元 </p>
@@ -155,7 +155,7 @@
 				<div class="col-lg-4 col-md-6 text-center berry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="grape.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
+							<a href="grape.html"><img src="/assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
 						<h3>葡萄</h3>
 						<p class="product-price"><span>每斤</span> 120元 </p>
@@ -168,7 +168,7 @@
 				<div class="col-lg-4 col-md-6 text-center lemon">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="lemon.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
+							<a href="lemon.html"><img src="/assets/img/products/product-img-3.jpg" alt=""></a>
 						</div>
 						<h3>檸檬</h3>
 						<p class="product-price"><span>每斤</span> 35元</p>
@@ -181,7 +181,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="kile.html"><img src="assets/img/products/product-img-4.jpg" alt=""></a>
+							<a href="kile.html"><img src="/assets/img/products/product-img-4.jpg" alt=""></a>
 						</div>
 						<h3>奇異果</h3>
 						<p class="product-price"><span>1顆</span> 20元 </p>
@@ -194,7 +194,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-5.jpg" alt=""></a>
+							<a href="single-product.html"><img src="/assets/img/products/product-img-5.jpg" alt=""></a>
 						</div>
 						<h3>青蘋果</h3>
 						<p class="product-price"><span>每顆</span> 100元 </p>
@@ -207,7 +207,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="raspberry.html"><img src="assets/img/products/product-img-6.jpg" alt=""></a>
+							<a href="raspberry.html"><img src="/assets/img/products/product-img-6.jpg" alt=""></a>
 						</div>
 						<h3>覆盆莓</h3>
 						<p class="product-price"><span>1包</span> 139元 </p>
@@ -299,26 +299,26 @@
 	<!-- end copyright -->
 	
 	<!-- jquery -->
-	<script src="assets/js/jquery-1.11.3.min.js"></script>
+	<script src="/assets/js/jquery-1.11.3.min.js"></script>
 	<!-- bootstrap -->
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- count down -->
-	<script src="assets/js/jquery.countdown.js"></script>
+	<script src="/assets/js/jquery.countdown.js"></script>
 	<!-- isotope -->
-	<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
+	<script src="/assets/js/jquery.isotope-3.0.6.min.js"></script>
 	<!-- waypoints -->
-	<script src="assets/js/waypoints.js"></script>
+	<script src="/assets/js/waypoints.js"></script>
 	<!-- owl carousel -->
-	<script src="assets/js/owl.carousel.min.js"></script>
+	<script src="/assets/js/owl.carousel.min.js"></script>
 	<!-- magnific popup -->
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="/assets/js/jquery.magnific-popup.min.js"></script>
 	<!-- mean menu -->
-	<script src="assets/js/jquery.meanmenu.min.js"></script>
+	<script src="/assets/js/jquery.meanmenu.min.js"></script>
 	<!-- sticker js -->
-	<script src="assets/js/sticker.js"></script>
+	<script src="/assets/js/sticker.js"></script>
 	<!-- main js -->
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/home.js"></script>
+	<script src="/assets/js/main.js"></script>
+	<script src="/assets/js/home.js"></script>
 
 </body>
 </html>
